@@ -3,5 +3,5 @@ Maintainer:
 Christopher (siege) O'Brien  <siege@preoccupied.net>
 
 Patches:
+Stephen Dawkins
 Stu Tomlinson  <stu@nosnilmot.com>
-
